--- a/css/stilo.css
+++ b/css/stilo.css
@@ -33,7 +33,7 @@ html {
 
 #divtel {
     width: 100%;
-    background-color: #544f7b;
+    background-color: #d0d0d0;
     line-height: 80px;
     font-size: 18px;
     color: #FFF;
@@ -44,7 +44,7 @@ html {
 
 #divcompartilhar {
     width: 100%;
-    background-color: #002560;
+    background-color: #5d8faf;
     line-height: 80px;
     font-size: 18px;
     color: #FFF;
