--- a/css/stilo.css
+++ b/css/stilo.css
@@ -33,7 +33,7 @@ html {
 
 #divtel {
     width: 100%;
-    background-color: #d0d0d0;
+    background-color: #898989;
     line-height: 80px;
     font-size: 18px;
     color: #FFF;
