--- a/css/stilo.css
+++ b/css/stilo.css
@@ -8,34 +8,26 @@ html {
     position: relative;
     width: 100%;
     height: auto;
-    margin-bottom: -3px;
+    margin-bottom: 5px;
+    padding-top: 5px;
 }
 
 #divzapzap {
     width: 100%;
     background-color: #39890f;
-    line-height: 80px;
-    font-size: 18px;
+    line-height: 60px;
+    font-size: 14px;
     color: #FFF;
     float: left;
     text-align: center;
 }
 
-#divlocalizacao {
-    width: 100%;
-    background-color: #8e2727;
-    line-height: 80px;
-    font-size: 18px;
-    color: #FFF;
-    float: left;
-    text-align: center;
-}
 
 #divtel {
     width: 100%;
     background-color: rgb(83, 95, 100);
-    line-height: 80px;
-    font-size: 18px;
+    line-height: 60px;
+    font-size: 14px;
     color: #FFF;
     float: left;
     text-align: center;
@@ -45,8 +37,8 @@ html {
 #divcompartilhar {
     width: 100%;
     background-color: #5d8faf;
-    line-height: 80px;
-    font-size: 18px;
+    line-height: 60px;
+    font-size: 14px;
     color: #FFF;
     float: left;
     text-align: center;
@@ -56,8 +48,8 @@ html {
 .propaganda {
     width: 100%;
     background-color: #ffffff;
-    line-height: 80px;
-    font-size: 18px;
+    line-height: 60px;
+    font-size: 14px;
     color: #030303;
     float: left;
     text-align: center;
