--- a/css/stilo.css
+++ b/css/stilo.css
@@ -35,13 +35,13 @@ html {
 }
 #divcompartilhar {
     width: 100%;
-    background-color: #5d8faf;
+    background-color: #f4f4f4;
     line-height: 60px;
     font-size: 14px;
-    color: #FFF;
+    color: #0a0909;
     float: left;
     text-align: center;
-
+    
 }
 
 .propaganda {
